--- a/student-portfolio/index.html
+++ b/student-portfolio/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- PWA / theme meta -->
+    <meta name="theme-color" content="#7c3aed" />
+    <link rel="manifest" href="/manifest.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>student-portfolio</title>
+    <title>Student Showcase</title>
   </head>
   <body>
     <div id="root"></div>
